JavaScriptCore/VM/CodeGenerator.cpp
@@ -1109,7 +1109,7 @@ RegisterID* CodeGenerator::emitUnaryNoDstOp(OpcodeID opcode, RegisterID* src)
     return src;
 }
 
-RegisterID* CodeGenerator::emitConstruct(RegisterID* dst, RegisterID* func, ArgumentsNode* argumentsNode)
+RegisterID* CodeGenerator::emitConstruct(RegisterID* dst, RegisterID* func, ArgumentsNode* argumentsNode, unsigned divot, unsigned startOffset, unsigned endOffset)
 {
     ASSERT(func->refCount());
 
@@ -1129,8 +1129,10 @@ RegisterID* CodeGenerator::emitConstruct(RegisterID* dst, RegisterID* func, Argu
         emitNode(argv.last().get(), n);
     }
 
+    emitExpressionInfo(divot, startOffset, endOffset);
     emitGetById(funcProto.get(), func, globalExec()->propertyNames().prototype);
 
+    emitExpressionInfo(divot, startOffset, endOffset);
     emitOpcode(op_construct);
     instructions().append(dst->index());
     instructions().append(func->index());
