JavaScriptCore/VM/Machine.cpp
@@ -477,6 +477,19 @@ static bool NEVER_INLINE resolveBaseAndFunc(ExecState* exec, Instruction* vPC, R
     return false;
 }
 
+#if HAVE(COMPUTED_GOTO)
+Opcode Machine::s_opcodeTable[numOpcodeIDs];
+#endif
+
+Opcode Machine::getOpcode(OpcodeID id)
+{
+    #if HAVE(COMPUTED_GOTO)
+        return s_opcodeTable[id];
+    #else
+        return id;
+    #endif
+}
+
 ALWAYS_INLINE void Machine::initializeCallFrame(Register* callFrame, CodeBlock* codeBlock, Instruction* vPC, ScopeChainNode* scopeChain, Register* r, int returnValueRegister, int argv, int argc, JSValue* function)
 {
     callFrame[RegisterFile::CallerCodeBlock] = codeBlock;
@@ -1387,7 +1400,7 @@ JSValue* Machine::privateExecute(ExecutionFlag flag, ExecState* exec, RegisterFi
     // here because our labels are only in scope inside this function.
     if (flag == InitializeAndReturn) {
         #if HAVE(COMPUTED_GOTO)
-            #define ADD_OPCODE(id) m_opcodeTable[id] = &&id;
+            #define ADD_OPCODE(id) s_opcodeTable[id] = &&id;
                 FOR_EACH_OPCODE_ID(ADD_OPCODE);
             #undef ADD_OPCODE
 
