JavaScriptCore/VM/Machine.h
@@ -74,14 +74,7 @@ namespace JSC {
         
         RegisterFile& registerFile() { return m_registerFile; }
         
-        Opcode getOpcode(OpcodeID id)
-        {
-            #if HAVE(COMPUTED_GOTO)
-                return m_opcodeTable[id];
-            #else
-                return id;
-            #endif
-        }
+        static Opcode getOpcode(OpcodeID id);
 
         OpcodeID getOpcodeID(Opcode opcode)
         {
@@ -299,7 +292,7 @@ namespace JSC {
         void* m_jsFunctionVptr;
 
 #if HAVE(COMPUTED_GOTO)
-        Opcode m_opcodeTable[numOpcodeIDs]; // Maps OpcodeID => Opcode for compiling
+        static Opcode s_opcodeTable[numOpcodeIDs]; // Maps OpcodeID => Opcode for compiling
         HashMap<Opcode, OpcodeID> m_opcodeIDTable; // Maps Opcode => OpcodeID for decompiling
 #endif
     };
